tests/expectations/parser/program/mapping_fail.out
Error [EPAR0370005]: expected '}', '@', 'record', 'struct', 'fn', 'final', 'const', 'mapping', 'storage', 'script', 'interface' -- found 'mappin'
    --> test:2:5
     |
   2 |     mappin balances: address => u128;
     |     ^^^^^^
Error [EPAR0370005]: expected '=>' -- found '->'
    --> test:4:22
     |
   4 |     mapping foo: bar -> baz;
     |                      ^^
Error [EPAR0370005]: expected ':' -- found 'bar'
    --> test:6:17
     |
   6 |     mapping foo bar => baz;
     |                 ^^^
